add free shipping feature to cart drawer

--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -250,6 +250,7 @@
     </a>
 
     {%- if settings.cart_type == 'drawer' -%}
+      {% render 'free-shipping-limit' %}
       {%- render 'cart-drawer' -%}
     {%- endif -%}
 
