--- a/snippets/cart-drawer.liquid
+++ b/snippets/cart-drawer.liquid
@@ -353,6 +353,12 @@
           <div id="CartDrawer-CartErrors" role="alert"></div>
         </form>
       </cart-drawer-items>
+
+      {% if settings.upsell_products %}
+        {% render 'cart-upsell' %}
+      {% endif %}
+
+      
       <div class="drawer__footer">
         {%- if settings.show_cart_note -%}
           <details id="Details-CartDrawer">
